k8s/cloud-test-ingress.yaml
#ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-test
spec:
  ingressClassName: easegress
  rules:
    - host: www.test.cloud.com
      http:
        paths:
          - path: /cloudtestuser
            backend:
              service:
                name: cloud-test-user
                port:
                  number: 30125
            pathType: ImplementationSpecific
          - path: /cloudtestservice
            backend:
              service:
                name: cloud-test-service
                port:
                  number: 30124
            pathType: ImplementationSpecific
